# tg_wiki

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  flake.nix  pyproject.toml
libs/scpedia-protos/: pyproject.toml
libs/scpedia-protos/src/scpedia_protos/wiki/v1/: wiki_pb2.py
libs/scpedia_protos/: pyproject.toml
libs/scpedia_protos/protos/scpedia_protos/wiki/v1/: wiki.proto
libs/scpedia_protos/src/scpedia_protos/wiki/v1/: wiki_pb2.py  wiki_pb2_grpc.py
migrations/: env.py
migrations/versions/: 692fe7020bd8_init_schema.py
services/wiki_service/: flake.nix  pyproject.toml
services/wiki_service/src/wiki_service/: grpc_server.py  main.py
services/wiki_service/src/wiki_service/domain/: article.py
services/wiki_service/src/wiki_service/internal/: errors.py  langs.py  to_pb.py
services/wiki_service/src/wiki_service/service/: http.py  wiki_client.py  wiki_service.py
services/wiki_service/src/wiki_service/service/http/: aiohttp.py  http_client.py
services/wiki_service/tests/: conftest.py  test_errors.py  test_grpc.py  test_langs.py  test_wiki_service_gets.py  test_wiki_service_search.py
src/tg_wiki/: main.py
src/tg_wiki/bot/: keyboards.py  messages.py  states.py  utility.py
src/tg_wiki/bot/handlers/: cancel.py  default.py  help.py  next.py  noop.py  search.py  select.py  settings.py  start.py
src/tg_wiki/cache/: articles.py  ports.py  users.py
src/tg_wiki/cache/in_memory/: articles.py  last_view.py  user_id.py  user_settings.py  users.py
src/tg_wiki/cache/redis/: article.py  articles.py  codec.py  last_view.py  user_id.py  user_settings.py  users.py
src/tg_wiki/clients/: http.py
src/tg_wiki/db/: __init__.py  config.py  engine.py  models.py  ports.py
src/tg_wiki/db/postgres/: postgres.py
src/tg_wiki/domain/: article.py  user.py
src/tg_wiki/provider/: reco.py  search.py
src/tg_wiki/reco_service/: reco.py
src/tg_wiki/search_service/: search.py
src/tg_wiki/service/: wiki_service.py
src/tg_wiki/services/: wiki_service.py
src/tg_wiki/settings_service/: user_settings.py
src/tg_wiki/wiki/: client.py
src/tg_wiki/wiki_service/: wiki.py
