[project]
name = "tg_wiki"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.24",
  "python-dotenv>=1.0",
  "aiohttp>=3.13",
  "redis>=6.0",
  "SQLAlchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pgvector>=0.3.5",
  "grpcio>=1.78",
  "grpcio-tools>=1.78",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
tg-wiki = "tg_wiki.main:run"