[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scpedia-protos"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "protobuf>=6.31.1",
  "grpcio>=1.78",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]